--- a/description.html
+++ b/description.html
@@ -1,179 +1,175 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Battle of WaterLOD</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
-
-    <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<!-- Favicon.ico and apple-touch-icon.png -->
-	<link rel="shortcut icon" href="icona.ico">
-
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
-	<!--Google Fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
-	<!--Font awesome-->
-	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-
-
-
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
-	</head>
-	<body>
-	<div id="fh5co-page">
-		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
-
-			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
-			<nav id="fh5co-main-menu" role="navigation">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="about.html">Project</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
-
-			<div class="fh5co-footer">
-				<p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci
-				<span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
-				<ul>
-					<li><a href="https://github.com/WaterLOD"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
-				</ul>
-			</div>
-
-		</aside>
-
-		<div id="fh5co-main">
-			<div id="backgroundImg">
-				<div class="fh5co-narrow-content">
-					<nav aria-label="breadcrumb">
-						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="about.html#workflow">Project - Workflow</a></li>
-							<li class="breadcrumb-item active" aria-current="page">Description of data</li>
-						</ol>
-					</nav>
-					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="top">
-					Description of data
-					</h2>
-					<div>
-						<p class="animate-box">We have <mark style="background-color: #cc0000; opacity:0.8; color:white;">described some items, using natural language, using our model</mark>. We have created a shared folder in Google Drive containing all the needed files <a href="https://drive.google.com/drive/folders/1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" target="_blank">here</a>, so you can click on the links.</p> 
-						<p class="animate-box"><img src="images/table.png" style="width:80%" class="img-responsive"></p> 
-						<p class="animate-box">So, we have done the <a id="descrizioni">descriptions</a> of:</p>
-						<ul class="animate-box">
-							<li><a href="#persona">PERSON</a>: Napoleon and Fauveau</li>
-							<li><a href="#soggetto">SUBJECT/CONCEPT</a>: Surrender, General and Killed</li>
-							<li><a href="#luogo">PLACE</a>: Rochefort and Waterloo</li>
-						</ul>
-						<p class="animate-box">
-							<h3 class="animate-box"><a id="persona">PERSON</a></h3>
-							<ul class="animate-box">
-								<li class="animate-box"><h4>Napoleon</h4>
-									<img src="images/napoleon.png" class="img-responsive animate-box">
-								</li>
-							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
-								<li class="animate-box"><h4>Fauveau</h4>
-									<img src="images/fauveau.png" class="img-responsive animate-box">
-								</li>
-							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
-
-							</ul>
-						</p>
-
-						<p class="animate-box">
-							<h3 class="animate-box"><a id="soggetto">SUBJECT / CONCEPT</a></h3>
-							<ul class="animate-box">
-								<li class="animate-box"><h4>Surrender</h4>
-									<img src="images/surrender.png" class="img-responsive animate-box">
-								</li>
-							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
-								<li class="animate-box"><h4>General</h4>
-									<img src="images/general.png" class="img-responsive animate-box">
-								</li>
-							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
-								<li class="animate-box"><h4>Killed</h4>
-									<img src="images/killed.png" class="img-responsive animate-box">
-								</li>
-							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
-							</ul>
-						</p>
-
-						<p class="animate-box">
-							<h3 class="animate-box"><a id="luogo">PLACE</a></h3>
-							<ul class="animate-box">
-								<li class="animate-box"><h4>Rochefort</h4>
-									<img src="images/rochefort.png" class="img-responsive animate-box">
-								</li>
-							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
-								<li class="animate-box"><h4>Waterloo</h4>
-									<img src="images/waterloo.png" class="img-responsive animate-box">
-								</li>
-							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
-							</ul>
-						</p>
-					
-					<nav aria-label="...">
-						<ul class="pager">
-							<li class="previous"><a href="conceptual.html"><span aria-hidden="true">&larr;</span> Conceptual model</a></li>
-    						<li class="next"><a href="rdf.html">RDF <span aria-hidden="true">&rarr;</span></a></li>
-  						</ul>
-					</nav>
-				</div>
-			</div>
- 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- Stellar -->
-	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Counters -->
-	<script src="js/jquery.countTo.js"></script>
-	
-	
-	<!-- MAIN JS -->
-	<script src="js/main.js"></script>
-
-	</body>
-</html>
+<!--[if lt IE 7]>      
+<html class="no-js lt-ie9 lt-ie8 lt-ie7">
+   <![endif]-->
+   <!--[if IE 7]>         
+   <html class="no-js lt-ie9 lt-ie8">
+      <![endif]-->
+      <!--[if IE 8]>         
+      <html class="no-js lt-ie9">
+         <![endif]-->
+         <!--[if gt IE 8]><!--> 
+         <html class="no-js">
+            <!--<![endif]-->
+            <head>
+               <meta charset="utf-8">
+               <meta http-equiv="X-UA-Compatible" content="IE=edge">
+               <title>Battle of WaterLOD</title>
+               <meta name="viewport" content="width=device-width, initial-scale=1">
+               <meta name="description" content="" />
+               <meta name="keywords" content="" />
+               <meta name="author" content="" />
+               <!-- Facebook and Twitter integration -->
+               <meta property="og:title" content=""/>
+               <meta property="og:image" content=""/>
+               <meta property="og:url" content=""/>
+               <meta property="og:site_name" content=""/>
+               <meta property="og:description" content=""/>
+               <meta name="twitter:title" content="" />
+               <meta name="twitter:image" content="" />
+               <meta name="twitter:url" content="" />
+               <meta name="twitter:card" content="" />
+               <!-- Favicon.ico and apple-touch-icon.png -->
+               <link rel="shortcut icon" href="icona.ico">
+               <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+               <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+               <!-- Animate.css -->
+               <link rel="stylesheet" href="css/animate.css">
+               <!-- Icomoon Icon Fonts-->
+               <link rel="stylesheet" href="css/icomoon.css">
+               <!-- Bootstrap  -->
+               <link rel="stylesheet" href="css/bootstrap.css">
+               <!-- Owl Carousel -->
+               <link rel="stylesheet" href="css/owl.carousel.min.css">
+               <link rel="stylesheet" href="css/owl.theme.default.min.css">
+               <!-- Theme style  -->
+               <link rel="stylesheet" href="css/style.css">
+               <!--Google Fonts-->
+               <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+               <!--Font awesome-->
+               <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+               <!-- Modernizr JS -->
+               <script src="js/modernizr-2.6.2.min.js"></script>
+               <!-- FOR IE9 below -->
+               <!--[if lt IE 9]>
+               <script src="js/respond.min.js"></script>
+               <![endif]-->
+            </head>
+            <body>
+               <div id="fh5co-page">
+               <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" alt="Toggle"><i></i></a>
+               <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
+                  <h1 id="fh5co-logo"><a href="index.html" alt="Index"><img src="images/logo.png" alt=""></a></h1>
+                  <nav id="fh5co-main-menu" role="navigation">
+                     <ul>
+                        <li><a href="index.html" alt="Home">Home</a></li>
+                        <li class="fh5co-active"><a href="about.html" alt="Project">Project</a></li>
+                        <li><a href="contact.html" alt="Contact">Contact</a></li>
+                     </ul>
+                  </nav>
+                  <div class="fh5co-footer">
+                     <p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci
+                        <span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" alt="Copyright Creative Commons">Copyright Creative Commons</a></span></small>
+                     </p>
+                     <ul>
+                        <li><a href="https://github.com/WaterLOD" alt="Gitahub page of the project"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
+                     </ul>
+                  </div>
+               </aside>
+               <div id="fh5co-main">
+               <div id="backgroundImg">
+               <div class="fh5co-narrow-content">
+                  <nav aria-label="breadcrumb">
+                     <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="about.html#workflow" alt="Project Workflow">Project - Workflow</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Description of data</li>
+                     </ol>
+                  </nav>
+                  <h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="top">
+                     Description of data
+                  </h2>
+                  <div>
+                     <p class="animate-box">We have <mark style="background-color: #cc0000; opacity:0.8; color:white;">described some items, using natural language, using our model</mark>. We have created a shared folder in Google Drive containing all the needed files <a href="https://drive.google.com/drive/folders/1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" target="_blank">here</a>, so you can click on the links.</p>
+                     <p class="animate-box"><img src="images/table.png" style="width:80%" class="img-responsive"></p>
+                     <p class="animate-box">So, we have done the <a id="descrizioni">descriptions</a> of:</p>
+                     <ul class="animate-box">
+                        <li><a href="#persona" alt="Person">PERSON</a>: Napoleon and Fauveau</li>
+                        <li><a href="#soggetto" alt="Subject/Concept">SUBJECT/CONCEPT</a>: Surrender, General and Killed</li>
+                        <li><a href="#luogo" alt="Place">PLACE</a>: Rochefort and Waterloo</li>
+                     </ul>
+                     <p class="animate-box">
+                     <h3 class="animate-box"><a id="persona">PERSON</a></h3>
+                     <ul class="animate-box">
+                        <li class="animate-box">
+                           <h4>Napoleon</h4>
+                           <img src="images/napoleon.png" class="img-responsive animate-box">
+                        </li>
+                        <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
+                        <li class="animate-box">
+                           <h4>Fauveau</h4>
+                           <img src="images/fauveau.png" class="img-responsive animate-box">
+                        </li>
+                        <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
+                     </ul>
+                     </p>
+                     <p class="animate-box">
+                     <h3 class="animate-box"><a id="soggetto">SUBJECT / CONCEPT</a></h3>
+                     <ul class="animate-box">
+                        <li class="animate-box">
+                           <h4>Surrender</h4>
+                           <img src="images/surrender.png" class="img-responsive animate-box">
+                        </li>
+                        <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
+                        <li class="animate-box">
+                           <h4>General</h4>
+                           <img src="images/general.png" class="img-responsive animate-box">
+                        </li>
+                        <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
+                        <li class="animate-box">
+                           <h4>Killed</h4>
+                           <img src="images/killed.png" class="img-responsive animate-box">
+                        </li>
+                        <p class="animate-box">Go back to the <a href="#descrizioni" alt="descriptions">descriptions</a></p>
+                     </ul>
+                     </p>
+                     <p class="animate-box">
+                     <h3 class="animate-box"><a id="luogo">PLACE</a></h3>
+                     <ul class="animate-box">
+                        <li class="animate-box">
+                           <h4>Rochefort</h4>
+                           <img src="images/rochefort.png" class="img-responsive animate-box">
+                        </li>
+                        <p class="animate-box">Go back to the <a href="#descrizioni" alt="descriptions">descriptions</a></p>
+                        <li class="animate-box">
+                           <h4>Waterloo</h4>
+                           <img src="images/waterloo.png" class="img-responsive animate-box">
+                        </li>
+                        <p class="animate-box">Go back to the <a href="#descrizioni" alt="descriptions">descriptions</a></p>
+                     </ul>
+                     </p>
+                     <nav aria-label="...">
+                        <ul class="pager">
+                           <li class="previous"><a href="conceptual.html" alt="Conceptual model"><span aria-hidden="true">&larr;</span> Conceptual model</a></li>
+                           <li class="next"><a href="rdf.html" alt="RDF">RDF <span aria-hidden="true">&rarr;</span></a></li>
+                        </ul>
+                     </nav>
+                  </div>
+               </div>
+               <!-- jQuery -->
+               <script src="js/jquery.min.js"></script>
+               <!-- jQuery Easing -->
+               <script src="js/jquery.easing.1.3.js"></script>
+               <!-- Bootstrap -->
+               <script src="js/bootstrap.min.js"></script>
+               <!-- Carousel -->
+               <script src="js/owl.carousel.min.js"></script>
+               <!-- Stellar -->
+               <script src="js/jquery.stellar.min.js"></script>
+               <!-- Waypoints -->
+               <script src="js/jquery.waypoints.min.js"></script>
+               <!-- Counters -->
+               <script src="js/jquery.countTo.js"></script>
+               <!-- MAIN JS -->
+               <script src="js/main.js"></script>
+            </body>
+         </html>
